fix(header): prevent active link shift in vertical menu

--- a/src/AngularClient/src/app/layout/header/header.component.css
+++ b/src/AngularClient/src/app/layout/header/header.component.css
@@ -1,4 +1,5 @@
 .active {
   color: #005cbb;
   transform: scale(1.05);
+  transform-origin: left;
 }
